--- a/src/CSS/HomePage.css
+++ b/src/CSS/HomePage.css
@@ -60,7 +60,7 @@
     border-style: solid;
     border-color: gray;
     border-width: 1px;
-    height: 180px;
+    height:25vh;
     background-repeat: no-repeat;
     background-size: cover;
 }
