--- a/src/CSS/HomePage.css
+++ b/src/CSS/HomePage.css
@@ -1,70 +1,124 @@
-
-@font-face{
-    font-family: 'Rancho', cursive;
-    src: url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
-
-}
-.header-top{
+.header-top {
     text-align: center;
     font-family: monospace;
-    margin-top: 1% ;
-}   
+    margin-top: 1%;
+}
 
-.header-top h6{
+.header-top h6 {
     float: none;
     color: red;
 }
-.banner{
-    height: 60vh;
-    margin: auto;
-    width: 70%;
-    margin-top: 10px;
-    background-image: url("../Images/wallpaper.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    font-family:monospace;
-    color: white;
-    position: relative;
-    
-}
-.banner-content{
-    position: absolute;
-    bottom: 0;
-    padding: 60px;
-}
-.banner-content h3{
-    font-family:'Ubuntu', sans-serif;
-    font-weight: 600;
-    margin-right: 40vh;
-    font-size: 34px;
-}
-.banner-content h5{
-    font-size: x-large;
-    margin-right: 30vh;
-}
-.signin-tab{
+
+.signin-tab {
     width: 60%;
     margin: auto;
-    padding-top:40px ;
+    margin-top: 3%;
+    padding-top: 40px;
     padding-bottom: 20px;
-    padding-left: 15px;
-    font-family:monospace;
-    color: black;
+    font-family: 'Roboto Slab', serif;
+
 
 }
-.blog-container{
+
+.blog-container {
     width: 60%;
     margin: auto;
 }
-.blog-image{
-    border-style: solid;
-    border-color: gray;
-    border-width: 1px;
-    height:25vh;
+
+.blog-image {
+
+    /* height: 250px; */
     background-repeat: no-repeat;
     background-size: cover;
+    margin-top: 10px;
 }
-.row{
-    margin-bottom: 70px;
 
+.featured-img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.div-posts {
+    background-color: #eef0ee;
+    border-radius: 5px;
+    position: relative;
+    top: 0;
+    transition: top ease 0.5s;
+}
+
+.div-posts:hover {
+    top: -5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+
+}
+
+.row {
+    margin-bottom: 10vh;
+
+}
+
+
+.col-sm-4 {
+    border: gray;
+}
+
+.div-for-title h4 {
+    font-family: 'Muli', sans-serif;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 22px;
+    font-weight: 300;
+}
+
+.div-for-title {
+    padding: 30px;
+}
+
+.div-for-title h5 {
+    font-family: 'Muli', sans-serif;
+    color: gray;
+    font-size: 18px;
+    font-weight: 200;
+    line-height: 1.6;
+    max-lines: 5;
+    
+
+
+}
+
+.insights {
+    padding: 20px;
+    color: gray;
+
+}
+
+.insights h6 {
+    float: left;
+    font-family: 'Muli', sans-serif;
+    font-size: 15px;
+    }
+
+span {
+    margin-left: 15px;
+    margin-right: 3px;
+    margin-top: -2px;
+    float: left;
+}
+
+.href-title{
+    color: black;
+}
+
+.href-title:hover{
+    color:#03a9f4;
+    text-decoration: none;
+}
+.read-more{
+    color:#03a9f4;
+    text-decoration: underline;
+    font-family: 'Muli', sans-serif;
+}
+.read-more:hover{
+    color: #4cbdf1;
 }
