--- a/src/CSS/NavbarPage.css
+++ b/src/CSS/NavbarPage.css
@@ -1,11 +1,147 @@
-.navbarStyle{
+.div-for-site-name {
+    color: WHITE;
+    width: 50%;
+    /* margin: auto; */
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 8vh;
+    margin-top: 5vh;
+}
+
+.div-for-site-name h2 {
+    font-family: 'Fjalla One', sans-serif;
+}
+
+.div-for-site-name h3 {
+    font-family: 'Great Vibes', cursive;
+
+}
+
+.nav-link {
+    font-weight: 600;
+    font-size: 20px;
+    margin-right: 15px;
+    font-family: 'Permanent Marker', cursive;
+    color: white !important;
+}
+
+.nav-link:hover {
+
+    color: gray !important;
+}
+
+.nav-link::selection {
+    color: blue;
+}
+
+.div-for-navbar {
+    height: 40vh;
+    width: 100%;
+    position: relative;
+
+}
+
+
+.navbar-content {
     width: 60%;
+    position: relative;
+    padding: 30px;
+    float: right;
+    margin-right: 5%;
+    margin-top: 1vh;
+
+}
+
+/* animation component css */
+@keyframes move_wave {
+    0% {
+        transform: translateX(0) translateZ(0) scaleY(1)
+    }
+
+    50% {
+        transform: translateX(-25%) translateZ(0) scaleY(0.55)
+    }
+
+    100% {
+        transform: translateX(-50%) translateZ(0) scaleY(1)
+    }
+}
+
+.waveWrapper {
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
     margin: auto;
-    font-family: monospace;
-    font-size: 18px;
+    background-image: url('https://images.unsplash.com/photo-1511887564786-445d5dee9c7e?ixlib=rb-1.2.1&auto=format&fit=crop&w=3407&q=80');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 
-  }
+}
 
-  .nav-link {
-      margin: 10px;
-  }
+.waveWrapperInner {
+    position: absolute;
+    width: 100%;
+    overflow: hidden;
+    height: 100%;
+    bottom: -1px;
+    /* background-image: url('https://images.unsplash.com/photo-1511887564786-445d5dee9c7e?ixlib=rb-1.2.1&auto=format&fit=crop&w=3407&q=80');
+    background-repeat: no-repeat;
+    background-attachment: fixed;  */
+}
+
+.bgTop {
+    z-index: 15;
+    opacity: 0.7;
+}
+
+.bgMiddle {
+    z-index: 10;
+    opacity: 0.5;
+}
+
+.bgBottom {
+    z-index: 5;
+}
+
+.wave {
+    position: absolute;
+    left: 0;
+    width: 200%;
+    height: 100%;
+    background-repeat: repeat no-repeat;
+    background-position: 0 bottom;
+    transform-origin: center bottom;
+}
+
+.waveTop {
+    background-size: 50% 100px;
+    background-image: url('http://front-end-noobs.com/jecko/img/wave-top.png');
+}
+
+.waveAnimation .waveTop {
+    animation: move-wave 3s;
+    -webkit-animation: move-wave 3s;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
+
+.waveMiddle {
+    background-size: 50% 120px;
+    background-image: url('http://front-end-noobs.com/jecko/img/wave-mid.png')
+}
+
+.waveAnimation .waveMiddle {
+    animation: move_wave 10s linear infinite;
+}
+
+.waveBottom {
+    background-size: 50% 100px;
+    background-image: url('http://front-end-noobs.com/jecko/img/wave-bot.png')
+}
+
+.waveAnimation .waveBottom {
+    animation: move_wave 15s linear infinite;
+}
