--- a/src/CSS/NavbarPage.css
+++ b/src/CSS/NavbarPage.css
@@ -4,8 +4,42 @@
     /* margin: auto; */
     text-align: center;
     vertical-align: middle;
-    padding-top: 8vh;
-    margin-top: 5vh;
+    padding-top: 10vh;
+    margin-top: 8vh;
+}
+.nav-container{
+    width: 80%;
+    margin: auto;
+}
+.navbar-content-blogpage{
+    width: 60%;
+    margin-left: auto;
+}
+.auth-name-blogpage{
+    width: 40%;
+    float: left;
+    color: white;
+    padding: 5px;
+    height: 10vh;
+    line-height: 10vh;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 0.1rem;
+}
+
+.navbar-blgpage{
+    background-color: rgb(148, 148, 150);
+    height: 10vh;
+    box-shadow: 0 6px 12px 0 #b6b7b8;
+
+}
+.navbar-content-blogpage {
+    width: 40%;
+    position: relative;
+    padding: 10px;
+    float: right;
+
 }
 
 .div-for-site-name h2 {
@@ -18,24 +52,21 @@
 }
 
 .nav-link {
-    font-weight: 600;
+    font-weight: 400;
     font-size: 20px;
     margin-right: 15px;
     font-family: 'Permanent Marker', cursive;
     color: white !important;
+    letter-spacing: 0.1rem;
+
 }
 
 .nav-link:hover {
-
-    color: gray !important;
-}
-
-.nav-link::selection {
-    color: blue;
+    color:#03a9f4 !important;
 }
 
 .div-for-navbar {
-    height: 40vh;
+    height: 45vh;
     width: 100%;
     position: relative;
 
